--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
   <link rel="stylesheet" href="styles.css">
   <title>Carebnb</title>
 </head>
 <body>
   <div class="app">
     <div id="photoDisplay"></div>
-    <div id="bookingPortal"></div>
     <div id="listingInfo"></div>
+    <div id="bookingPortal"></div>
     <div id="reviews"></div>
   </div>
   <script src='bundle.js'></script>
