--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,7 @@
   <title>Carebnb</title>
 </head>
 <body>
-  <div class="app">
-    <div id="photoDisplay"></div>
-    <div id="listingInfo"></div>
-    <div id="bookingPortal"></div>
-    <div id="reviews"></div>
-  </div>
-  <script src='bundle.js'></script>
+  <div id="app"></div>
+  <script src='http://localhost:4000/bundle.js'></script>
 </body>
 </html>
