Update proxy to route requests to reviews module, complete stress testing using K6 and New Relic

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,6 @@
     <div id="bookingPortal"></div>
     <div id="reviews"></div>
   </div>
-  <script src='bundle.js'></script>
+  <script src='http://localhost:3001/bundle.js'></script>
 </body>
 </html>
