--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script src='http://localhost:4000/bundle.js'></script>
+  <script src='http://18.224.171.203:4000/bundle.js'></script>
 </body>
 </html>
